# tracksuitgolf

./: .gitignore  README.md  pyproject.toml
data/: .gitignore  config.ini
migrations/: 001_create_tables.sql
tracksuitgolf/: package-lock.json
tracksuitgolf/app/: layout.tsx  page.tsx
tsg_api/: config.py  course.py  main.py  match.py  player.py  scorecard.py  tournament.py
