[tool.poetry]
name = "tsg_api"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "3.11.8"
supabase = "^2.4.0"
uvicorn = "^0.27.1"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
ruff = "^0.2.1"

[tool.black]
line-length = 120

[tool.ruff]
lint.select = ["E", "F", "B", "W", "I", "C", "N", "S", "A"]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
